--- a/src/app/Home/style.css
+++ b/src/app/Home/style.css
@@ -56,6 +56,12 @@
     .contact-image{
         width: 40%;
     }
+    .contact-more{
+        a{
+            text-decoration: none;
+            color: gray;
+        }
+    }
 }
 
 @media only screen and (max-width: 600px) {
