--- a/src/app/Footer/style.css
+++ b/src/app/Footer/style.css
@@ -1,26 +1,36 @@
-.footer-container{
+.footer-container {
     background-color: rgba(211, 211, 211, 0.3);
     padding: 20px 0px;
 }
-.footer-content{
+
+.footer-content {
     justify-content: space-evenly;
     text-align: center;
     align-items: center;
 }
-.vertical-line{
+
+.vertical-line {
     width: 100%;
     height: 1px;
     background-color: rgba(211, 211, 211, 1);
 }
-.copyright-container{
+
+.copyright-container {
     justify-content: space-evenly;
     padding: 10px 0px;
     text-align: center;
 }
-.footer-description{
+
+.footer-description {
     font-size: 11px;
     margin: 1em 3em;
 }
-.css-1umw9bq-MuiSvgIcon-root{
+
+.css-1umw9bq-MuiSvgIcon-root {
     color: red;
+}
+
+.contactLink {
+    text-decoration: none;
+    color: black;
 }
