--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,30 @@
+
+/* ===============================
+   GLOBAL RESET & FONTS
+================================ */
+
+
+
+@font-face {
+  font-family: "Inter";
+  src: url("../../public/fonts/Inter_18pt-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("../../public/fonts/Inter_18pt-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("../../public/fonts/Inter_18pt-Black.ttf") format("truetype");
+  font-weight: 900;
+  font-style: normal;
+}
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -19,7 +46,7 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Inter", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -44,12 +71,57 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.contact-btn {
+    color: #981f1f;
+    text-transform: uppercase;
+    text-decoration: none;
+    border: 1px solid #981f1f !important;
+    padding: 10px 20px;
+    font-size: 14px;
+    cursor: pointer;
+    font-weight: bold;
+    background: transparent;
+    position: relative;
+    transition: all 1s;
+    overflow: hidden;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    gap: 7px;
+}
+
+.contact-btn:hover {
+    color: white;
+}
+
+.contact-btn::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 0%;
+    top: 0;
+    left: -40px;
+    transform: skewX(45deg);
+    background-color: #981f1f;
+    z-index: -1;
+    transition: all 1s;
+}
+
+.contact-btn:hover::before {
+    width: 160%;
+}
+
+.contact-btn:hover svg {
+    fill: #ffffff;
+    transition: all 1s;
 }
 
 @media (prefers-color-scheme: dark) {
