--- a/src/app/Header/styles.css
+++ b/src/app/Header/styles.css
@@ -10,6 +10,27 @@
     z-index: 10;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+.logo-container{
+    display: flex;
+    align-items: flex-end;
+    gap: 6;
+    text-decoration: none;
+    color: black;
+    .logo-text-container{
+        text-align: left;
+        margin-bottom: -5px;
+    }
+    .logo-boldTxt{
+        font-weight: bold;
+        font-size: 18px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        margin-bottom: -5px;
+    }
+    .logo-lightTxt{
+        font-size: 8px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+}
 
 .navigation-link {
     justify-content: center;
@@ -18,6 +39,9 @@
     font-size: 15px;
     font-weight: 300;
     color: #0d8ca6
+}
+.link{
+    text-decoration: none;
 }
 
 .contact-header {
