--- a/src/app/Home/style.css
+++ b/src/app/Home/style.css
@@ -12,7 +12,7 @@
 }
 
 .home-banner {
-    background-image: url('/Banners/end-to-end-home-interior-designs.jpg');
+    background-image: url('/Banners/HomeBanner.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -41,6 +41,7 @@
         width: 60%;
         height: 25em;
         margin-top: 2em;
+        border-radius: 20px;
     }
 }
 
@@ -121,7 +122,7 @@
 @media only screen and (max-width: 600px) {
     .service-card-container {
         .MuiPaper-root {
-            width: 47%;
+            width: 100%;
         }
     }
 
